--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -15,6 +15,7 @@ body {
 
 li.nav-item {
     background-color: #222222;
+    border-right:1px solid white;
 }
 
 li.nav-item a{
@@ -24,6 +25,7 @@ li.nav-item a{
 
 li.nav-item a:hover{
     color: black;
+    background-color: slategrey;
 }
 
 .breadcrumb {
