--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <!-- Morris Charts CSS -->
     <link href="~/Css/morris.css" rel="stylesheet" />
     <link href="~/Css/item.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Rubik" rel="stylesheet">
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </head>
