--- a/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
@@ -71,6 +71,6 @@
             </tr>
         </tbody>
     </table>
-    @Html.ActionLink("Back to Lists", "ListManagement", "Home", new { @class = "btn btn-primary"}, null)
+    @Html.ActionLink("Back to Lists", "ListManagement", "Home", null, new { @class = "btn btn-primary"})
 
 </div>
