--- a/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
@@ -10,14 +10,14 @@
     <h2>Add New Subscriber Group</h2>
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
     <form>
-        <div class="form-group">
+        <div class="form-group row">
             <label for="group-title" class="col-xs-2 col-form-label">Group Title</label>
             <div class="col-xs-10">
                 <input type="text" class="form-control" id="group-title" placeholder="Enter title">
                 <small id="titleHelp" class="form-text text-muted">You may change the title later.</small>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group row">
             <label for="notesTextarea" class="col-xs-2 col-form-label">Group Description</label>
             <div class="col-xs-10">
                 <textarea class="form-control" id="notesTextarea" rows="2"></textarea>
