--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -10,13 +10,32 @@
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
     <form>
-        <div class="form-group">
+        <div class="form-group row">
             <label for="list-title" class="col-xs-2 col-form-label">Group Title</label>
             <div class="col-xs-10">
                 <input type="text" class="form-control" id="list-title" value="Family">
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group row">
+            <label for="inviteTextarea" class="col-xs-2 col-form-label">Invite Subscriber</label>
+            <div class="col-xs-10">
+                <textarea class="form-control" id="inviteTextarea" rows="1" placeholder="Enter name or email address..."></textarea>
+                
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="note-detail" class="col-xs-2 col-form-label">Invitation Message</label>
+            <div class="col-xs-10">
+                <textarea class="form-control" id="note-detail" rows="2"></textarea>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="note-detail" class="col-xs-2 col-form-label">&nbsp;</label>
+            <div class="col-xs-10">
+                @Html.ActionLink("Send Invitation", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+            </div>
+        </div>
+        <div class="form-group row">
             <table class="table">
                 <thead>
                     <tr>
@@ -54,23 +73,6 @@
             </table>
         </div>
 
-        <div class="form-group">
-            <label for="inviteTextarea" class="col-xs-2 col-form-label">Invite Subscriber</label>
-            <div class="col-xs-10">
-                <textarea class="form-control" id="inviteTextarea" rows="1" placeholder="Enter name or email address..."></textarea>
-                
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="note-detail" class="col-xs-2 col-form-label">Invitation Message</label>
-            <div class="col-xs-10">
-                <textarea class="form-control" id="note-detail" rows="2"></textarea>
-            </div>
-            <label for="note-detail" class="col-xs-2 col-form-label">&nbsp;</label>
-            <div class="col-xs-10">
-                @Html.ActionLink("Send Invitation", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
-            </div>
-        </div>
         <div class="col-xs-12">
             @Html.ActionLink("Save Changes", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-success" })
         </div>
