--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -34,7 +34,7 @@
                 <td>Grocery</td>
                 <td>Greg, Alan ...</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditList", "List", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })
                 </td>
@@ -46,7 +46,7 @@
                 <td>To Do</td>
                 <td>Alice, Alan ...</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditList", "List", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })
                 </td>
@@ -58,7 +58,7 @@
                 <td>Task</td>
                 <td>Greg, Alan ...</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditList", "List", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })
                 </td>
