--- a/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
@@ -25,7 +25,7 @@
                 <td>Family</td>
                 <td>June 24, 2016</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
                 </td>
@@ -35,7 +35,7 @@
                 <td>Students</td>
                 <td>Sep 24, 2016</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
                 </td>
@@ -45,7 +45,7 @@
                 <td>Friends</td>
                 <td>Dec 24, 2016</td>
                 <td>
-                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                     @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
                     @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
                 </td>
