--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -70,7 +70,7 @@
                         <td>Greg Willow</td>
                         <td>Subscriber</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
                         </td>
                     </tr>
@@ -78,7 +78,7 @@
                         <td>Alan Wong</td>
                         <td>Subscriber</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
                         </td>
                     </tr>
@@ -86,7 +86,7 @@
                         <td>Alice Smith</td>
                         <td>Collaborator</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Subscriber</a>
                         </td>
                     </tr>
@@ -108,31 +108,46 @@
                         <td><input type="checkbox" value=""></td>
                         <td>Avacado x 2</td>
                         <td><input value="2.5"/></td>
-                        <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
+                        <td>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                            <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                        </td>
                     </tr>
                     <tr>
                         <td><input type="checkbox" value=""></td>
                         <td>Paper towel x 9</td>
                         <td><input value="2.5" /></td>
-                        <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
+                        <td>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                            <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                        </td>
                     </tr>
                     <tr>
                         <td><input type="checkbox" value=""></td>
                         <td>Oranges</td>
                         <td><input value="9.99" /></td>
-                        <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
+                        <td>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                            <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                        </td>
                     </tr>
                     <tr>
                         <td><input type="checkbox" value=""></td>
                         <td>Cake Mix</td>
                         <td><input value="13.5" /></td>
-                        <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
+                        <td>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                            <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                        </td>
                     </tr>
                     <tr>
                         <td><input type="checkbox" value=""></td>
                         <td>Whip Cream</td>
                         <td><input value="15" /></td>
-                        <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
+                        <td>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                            <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
