--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -15,18 +15,32 @@
     <table class="table">
         <thead class="thead-inverse">
             <tr>
+                <th>#</th>
                 <th>Open Lists</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             <tr>
+                <td>1</td>
                 <td>Winter Sports Supply</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                </td>
             </tr>
             <tr>
+                <td>2</td>
                 <td>Cake Ingredients</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                </td>
             </tr>
             <tr>
+                <td>3</td>
                 <td>Paul's X-mas Shopping List</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                </td>
             </tr>
         </tbody>
     </table>
