--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -49,7 +49,7 @@
                         <td>Greg Willow</td>
                         <td>Subscriber</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
                         </td>
                     </tr>
@@ -57,7 +57,7 @@
                         <td>Alan Wong</td>
                         <td>Subscriber</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
                         </td>
                     </tr>
@@ -65,7 +65,7 @@
                         <td>Alice Smith</td>
                         <td>Collaborator</td>
                         <td>
-                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                             <a class="btn btn-primary" href="#" role="button">Convert to Subscriber</a>
                         </td>
                     </tr>
