--- a/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
@@ -16,18 +16,35 @@
     <table class="table">
         <thead class="thead-inverse">
             <tr>
+                <th>#</th>
                 <th>Completed Lists</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             <tr>
+                <td>1</td>
                 <td>St.Patrick's Day Party Supply</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-primary">Open</a>
+                </td>
             </tr>
             <tr>
+                <td>2</td>
                 <td>BCIT SSD Program Registration</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-primary">Open</a>
+                </td>
             </tr>
             <tr>
+                <td>3</td>
                 <td>Set up personal website</td>
+                <td>
+                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-primary">Open</a>
+                </td>
             </tr>
         </tbody>
     </table>
