--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -33,6 +33,7 @@
             </div>
             <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
             <a href="#" class="forgot-password">Forgot the password?</a>
+            <a>@Html.ActionLink("Log In as Admin", "Index", "Admin")</a>
         </form>
         </div>
     </div>
