--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -46,6 +46,7 @@
         <div class="form-group row">
             <label for="selectSubscriberGroup" class="col-xs-2 col-form-label">Select Subscriber Group</label>
             <div class="col-xs-10">
+                <img src="~/images/paul_mills.jpg" />
                 <select multiple class="form-control" id="selectSubscriberGroup">
                     <option>Family</option>
                     <option>Friends</option>
