--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -40,6 +40,7 @@
                 <td>Paul's X-mas Shopping List</td>
                 <td>
                     <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-warning">Unsubscribe</a>
                 </td>
             </tr>
         </tbody>
