--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -26,6 +26,7 @@
                 <td>Winter Sports Supply</td>
                 <td>
                     <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-warning">Unsubscribe</a>
                 </td>
             </tr>
             <tr>
@@ -33,6 +34,7 @@
                 <td>Cake Ingredients</td>
                 <td>
                     <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
+                    <a class="btn btn-warning">Unsubscribe</a>
                 </td>
             </tr>
             <tr>
