--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="mainDiv" >
     <h2 class="col-lg-4 col-lg-offset-4 col-xs-12" id="title">Welcome to the OneList!</h2>
     <p class="col-lg-6 col-lg-offset-3 col-xs-12">OneList provides the altimate solution for creating list for multiple people.<p>
     <br />
-    <button class="btn btn-primary col-lg-2 col-lg-offset-3 col-xs-12" onclick="location.href='@Url.Action("Login", "Home")';return false;">Create an Account</button>
+    <button class="btn btn-primary col-lg-2 col-lg-offset-5 col-xs-12" onclick="location.href='@Url.Action("Login", "Home")';return false;">Create an Account</button>
 </div>
