--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -13,6 +13,6 @@
     <button class="btn btn-primary col-lg-2 col-lg-offset-5 col-xs-12" onclick="location.href='@Url.Action("Login", "Home")';return false;">Create an Account</button>
     <br />
     <a class="col-lg-4 col-lg-offset-4 col-xs-12" href="https://docs.google.com/document/d/1ZJd_2mLclKC9QodANm3mzAkklBZodnQdKstqLdgSoLo/edit#heading=h.z6ne0og04bp5">Current Design Document</a>
-    <p class="col-lg-4 col-lg-offset-4 col-xs-12">Last Updated at: 2017-02-09  13:10:00</p>
+    <p class="col-lg-4 col-lg-offset-4 col-xs-12">@ViewBag.date</p>
     </div>
 </div>
