--- a/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
@@ -4,5 +4,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ForgotPassword</h2>
+<h2>Forgot Your Password</h2>
+
+@using (Html.BeginForm("ForgotPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
+                        FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
+{
+   // @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <div class="form-group">
+                <p>Please submit the your email address</p>
+                <input type="text" name="email" class="form-control" placeholder="Email"/>
+                <input type="submit" value="Submit" class="form-control"/>
+        </div>
+    </div>
+}
 
