--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -4,9 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/Home/Sidebar.cshtml");
+@Html.Partial("~/Views/Home/Sidebar.cshtml")
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="~/Scripts/app.js"></script>
+<script>
+    window.onload = function ()
+    {
+      getCoupons();
+      var timer=  setInterval(getCoupons, 30000);
 
+    }
+</script>
 @*<script>
     google.charts.load('current', { 'packages': ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
@@ -125,4 +133,9 @@
     </div>
     <!-- /#page-wrapper -->
 </div>
+   
+</div>
+<div class="row">
+    <h3>Go ahead and use the following coupons!!!</h3>
+    <span id='value1'><br /></span>
 </div>
