--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿<script src="~/Scripts/jquery-3.1.1.js"></script>
+<script src="~/Scripts/app.js"></script>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
