Added Item Controller, tied with new views

--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -59,8 +59,8 @@
                 <td>Greg, Alan ...</td>
                 <td>
                     <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-                    @Html.ActionLink("Edit", "EditList", "List", null, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Edit", "EditList", "List", new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "ShowListDetails", "List", new { @class = "btn btn-primary" })
                 </td>
             </tr>
         </tbody>
