--- a/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
@@ -1,21 +1,21 @@
 ﻿@model OneListApplication.ViewModels.ItemVM
 
 @{
-    ViewBag.Title = "CreateItem";
+    ViewBag.Title = "EditItem";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
+
 <div id="wrapper">
-    <h2>Create Item</h2>
+    <h2>EditItem</h2>
     @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
 
-    @using (Html.BeginForm("CreateItem", "Item", FormMethod.Post))
+    @using (Html.BeginForm("EditItem", "Item", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-
+        @Html.HiddenFor(model => model.ItemID)
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
             <div class="form-group">
                 @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -27,7 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ItemName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ItemName, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    @Html.EditorFor(model => model.ItemName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ItemName, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -50,13 +50,13 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Update" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
-</div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</div>
