--- a/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
@@ -1,51 +1,52 @@
-﻿
+﻿@model OneListApplication.ViewModels.ItemVM
+
 @{
     ViewBag.Title = "ItemDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
 
 <div id="wrapper">
-    <h2>Edit Item</h2>
-    <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">@Html.ActionLink("Avaliable Items", "ItemManagement", "Item", new { @class = "nav-link active" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Create Item", "CreateItem", "Item", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Avaliable Item Group", "ItemGroupManagement", "Item", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Create Item Group", "CreateItemGroup", "Item", new { @class = "nav-link" }, null)</li>
-    </ul>
-    <form>
-        <div class="form-group">
-            <label for="list-title" class="col-xs-2 col-form-label">Item Name</label>
-            <div class="col-xs-10">
-                <input type="text" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="Tomato" required>
-            </div>
-        </div><br/>
-        <div class="form-group">
-            <label for="list-title" class="col-xs-2 col-form-label">Item Price</label>
-            <div class="col-xs-10">
-                <input type="number" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="$1.5">
-            </div>
-        </div><br />
-        <div class="form-group">
-            <label for="selectItemGroup" class="col-xs-2 col-form-label">Select Item Group</label>
-            <div class="col-xs-10">
-                <select class="form-control" id="selectItemGroup">
-                    <option selected="selected">Grocery Items</option>
-                    <option>Stationary</option>
-                    <option>Bill Items</option>
-                </select>
-            </div>
-        </div><br />
-        <div class="form-group">
-            <label for="subscriberTextarea" class="col-xs-2 col-form-label">Description</label>
-            <div class="col-xs-10">
-                <textarea class="form-control" id="subscriberTextarea" rows="4">Small size, roman tomato</textarea>
-            </div>
-        </div><br />
-        <div class="col-xs-10">
-            <button type="submit" class="btn btn-primary">Update</button>
-        </div>
-    </form>
+    <h2>Item Detail</h2>
+    @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.UserID)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.UserID)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ItemName)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ItemName)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ItemDescription)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ItemDescription)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ItemCategory)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ItemCategory)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "EditItem", new { id = Model.ItemID })
+    </p>
+    <p>@ViewBag.ErrorMsg</p>
 </div>
