--- a/OneListApplication/OneListApplication/Views/Item/ItemManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemManagement.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<OneListApplication.ViewModels.ItemVM>
+
 @{
     ViewBag.Title = "ItemManagement";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,33 +7,43 @@
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
 
 <div id="wrapper">
-<h2>Avaliable Items</h2>
-    <div>
-    <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">@Html.ActionLink("Avaliable Items", "ItemManagement", "Item", new { @class = "nav-link active" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Create Item", "CreateItem", "Item", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Avaliable Item Group", "ItemGroupManagement", "Item", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Create Item Group", "CreateItemGroup", "Item", new { @class = "nav-link" }, null)</li>
-    </ul>
+    <h2>All Items</h2>
+    @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemDescription)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemCategory)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemCategory)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "EditItem", new { id = item.ItemID }, new { @class = "btn btn-primary" }) 
+                    @Html.ActionLink("Details", "ItemDetail", new { id = item.ItemID }, new {@class = "btn btn-primary" }) 
+                    @Html.ActionLink("Delete", "DeleteItem", new { id = item.ItemID}, new {@class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
+
+    </table>
+    <p>@ViewBag.ErrorMsg</p>
     </div>
-    <div>
-        <ul id="avaItems" ondragstart="">
-            <li draggable="true">@Html.ActionLink("Flower", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Cucumber", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Beef", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Pork", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Chicken Breast", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Chicken Wing", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Lamb Chop", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Tomato", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Photato", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Rice", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Paper", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Printer", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Notebook", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("USB", "ItemDetail", "Item")</li>
-            <li draggable="true">@Html.ActionLink("Christmas Lights", "ItemDetail", "Item")</li>
-        </ul>
-        <button type="button" class="btn btn-primary col-lg-2 col-lg-offset-4">Add New</button>
-    </div>
-</div>
