--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -48,6 +48,16 @@
                             <li>@Html.ActionLink("Home", "Home", "Home")</li>
                         }
                     }
+                    @*@{if (Request.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Add Roles", "AddRole", "Home")</li>
+                        }
+                    }*@
+                    @{if (Request.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Assign Roles", "AddUserToRole", "Home")</li>
+                        }
+                    }
                     @{if (Request.IsAuthenticated)
                         {
                             <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
