edmx for onelistcore

--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                             <li>@Html.ActionLink("Add Roles", "AddRole", "Home")</li>
                         }
                     }*@
-                    @{if (Request.IsAuthenticated)
+                    @{if (Request.IsAuthenticated&& HttpContext.Current.User.IsInRole("Administrator"))
                         {
                             <li>@Html.ActionLink("Assign Roles", "AddUserToRole", "Home")</li>
                         }
