--- a/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
@@ -36,11 +36,11 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.ItemCategory)
+                @Html.DisplayNameFor(model => model.ItemCategoryName)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.ItemCategory)
+                @Html.DisplayFor(model => model.ItemCategoryName)
             </dd>
 
         </dl>
