--- a/OneListApplication/OneListApplication/Views/Item/old/EditItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/old/EditItem.cshtml
@@ -8,16 +8,14 @@
 
 <div id="wrapper">
     <h2>EditItem</h2>
-    @using (Html.BeginForm())
+    @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+
+    @using (Html.BeginForm("EditItem", "Item", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-
+        @Html.HiddenFor(model => model.ItemID)
         <div class="form-horizontal">
-            <h4>ItemVM</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.ItemID)
-
             <div class="form-group">
                 @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -45,18 +43,19 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.ItemCategory, ViewBag.Categories as SelectList)
+                    @Html.DropDownListFor(m => m.ItemCategory, Model.ItemCategoryList, htmlAttributes: new { @class = "form-control" })
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Update" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
-</div>
+
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</div>
