--- a/OneListApplication/OneListApplication/Css/sb-admin.css
+++ b/OneListApplication/OneListApplication/Css/sb-admin.css
@@ -33,9 +33,9 @@ body {
 }
 
 @media(min-width:768px) {
-    #wrapper {
+    /*#wrapper {
         padding-left: 225px;
-    }
+    }*/
 
     #page-wrapper {
         padding: 10px;
