--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -29,31 +29,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("OneList", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @{if (!Request.IsAuthenticated) {
+                        @Html.ActionLink("OneList", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    }else
+                    {
+                        @Html.ActionLink("OneList", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    }
+                }         
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    @{if (!Request.IsAuthenticated)
+                <ul class="nav navbar-nav navbar-left">
+                    @{if (Request.IsAuthenticated)
                         {
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("List", "ListManagement", "Home")</li>
+                            <li>@Html.ActionLink("Item", "ItemManagement", "Item")</li>
+                            <li>@Html.ActionLink("Subscriber", "SubscriberManagement", "Home")</li>
                         }
                     }
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     @{if (!Request.IsAuthenticated)
                         {
                             <li>@Html.ActionLink("Log In", "Login", "Home")</li>
                         }
                     }
-                    @{if (Request.IsAuthenticated)
-                        {
-                            <li>@Html.ActionLink("Home", "Home", "Home")</li>
-                        }
-                    }
+ 
                     @*@{if (Request.IsAuthenticated)
-                        {
-                            <li>@Html.ActionLink("Add Roles", "AddRole", "Home")</li>
-                        }
-                    }*@
-                    @{if (Request.IsAuthenticated&& HttpContext.Current.User.IsInRole("Administrator"))
+                {
+                    <li>@Html.ActionLink("Add Roles", "AddRole", "Home")</li>
+                }
+            }*@
+                    @{if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("Administrator"))
                         {
                             <li class="dropdown">
                                 <button class="btn btn-default dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -70,6 +76,7 @@
                     }
                     @{if (Request.IsAuthenticated)
                         {
+                            <li><a href="@Url.Action("Index", "Profile")"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a></li>
                             <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
                         }
                     }
